workspace api added, thymeleaf support added
