# misc/swagger.yaml
@@ -226,6 +226,183 @@ paths:
       security:
         - api_key: []
         - cdtportal_auth: []
+  /workspace:
+    post:
+      tags:
+        - workspace
+      summary: create a new workspace
+      description: 'Creates a workspace shared between all tools'
+      operationId: createWorkspace
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - in: body
+          name: body
+          description: Workspace description to create
+          required: true
+          schema:
+            $ref: '#/definitions/Workspace'
+      responses:
+        '405':
+          description: Invalid input
+      security:
+        - api_key: []
+        - cdtportal_auth: []
+    put:
+      tags:
+        - workspace
+      summary: Update an existing workspace
+      description: ''
+      operationId: updateWorkspace
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - in: body
+          name: body
+          description: workspace object that needs to be added to the store
+          required: true
+          schema:
+            $ref: '#/definitions/Workspace'
+      responses:
+        '400':
+          description: Invalid ID supplied
+        '404':
+          description: workspace not found
+        '405':
+          description: Validation exception
+      security:
+        - api_key: []
+        - cdtportal_auth: []
+        
+  /workspace/findByStatus:
+    get:
+      tags:
+        - workspace
+      summary: Finds workspaces by status
+      description: Multiple status values can be provided with comma separated strings
+      operationId: findWorkspacesByStatus
+      produces:
+        - application/json
+      parameters:
+        - name: status
+          in: query
+          description: Status values that need to be considered for filter
+          required: true
+          type: array
+          items:
+            type: string
+            enum:
+              - available
+              - pending
+              - sold
+            default: available
+          collectionFormat: csv
+      responses:
+        '200':
+          description: successful operation
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/Workspace'
+        '400':
+          description: Invalid status value
+      security:
+        - api_key: []
+        - cdtportal_auth: []
+        
+  /workspace/{workspaceId}:
+    get:
+      tags:
+        - workspace
+      summary: Find workspace by ID
+      description: Returns a single workspace
+      operationId: getWorkspaceById
+      produces:
+        - application/json
+      parameters:
+        - name: workspaceId
+          in: path
+          description: ID of workspace to return
+          required: true
+          type: integer
+          format: int64
+      responses:
+        '200':
+          description: successful operation
+          schema:
+            $ref: '#/definitions/Workspace'
+        '400':
+          description: Invalid ID supplied
+        '404':
+          description: workspace not found
+      security:
+        - api_key: []
+        - cdtportal_auth: []
+    post:
+      tags:
+        - workspace
+      summary: Updates a workspace in the store with form data
+      description: ''
+      operationId: updateWorkspaceWithForm
+      consumes:
+        - application/x-www-form-urlencoded
+      produces:
+        - application/json
+      parameters:
+        - name: workspaceId
+          in: path
+          description: ID of workspace that needs to be updated
+          required: true
+          type: integer
+          format: int64
+        - name: name
+          in: formData
+          description: Updated name of the workspace
+          required: false
+          type: string
+        - name: status
+          in: formData
+          description: Updated status of the workspace
+          required: false
+          type: string
+      responses:
+        '405':
+          description: Invalid input
+      security:
+        - api_key: []
+        - cdtportal_auth: []
+    delete:
+      tags:
+        - workspace
+      summary: Deletes a workspace
+      description: ''
+      operationId: deleteWorkspace
+      produces:
+        - application/json
+      parameters:
+        - name: api_key
+          in: header
+          required: false
+          type: string
+        - name: workspaceId
+          in: path
+          description: workspace id to delete
+          required: true
+          type: integer
+          format: int64
+      responses:
+        '400':
+          description: Invalid workspace value
+      security:
+        - api_key: []
+        - cdtportal_auth: []
+
+
+
   /user:
     post:
       tags:
@@ -594,6 +771,32 @@ definitions:
       lead:
         type: string
         example: alice.developer
+      tags:
+        type: array
+        items:
+          $ref: '#/definitions/Tag'
+      description:
+        type: string
+        description: definition of project, like Human Resources Web Portal
+  Workspace:
+    title: Workspace
+    description: A workspace based on Theia ide
+    type: object
+    required:
+      - name
+      - key
+    properties:
+      id:
+        type: integer
+        format: int64
+      name:
+        type: string
+        example: Helloworld
+      owner:
+        type: string
+      git_url:
+        type: string
+        example: git://hrweb@gitea
       tags:
         type: array
         items:
